# patoyata-gacha

./: .gitignore  README.md  app.py  patoyata_gacha.ipynb  pyproject.toml  requirements.txt
data/patoyata_gacha/: image_list.csv
notebook/: gacha_deploy.ipynb  patoyata_gacha.ipynb
